feat: Started Workout structure

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,6 +4,7 @@
   "Exercise": "Exercício",
   "Sets": "Séries",
   "Reps": "Repetições",
+  "Weight": "Peso",
   "Rest": "Descanso",
   "Status": "Status"
 }
