feat: Added redux + store + sign in  + sign up

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,16 @@
 {
-  "error-message": {}
+  "error-message": {
+    "sign-up-user": {
+      "auth/invalid-email": "Please, add a valid email",
+      "auth/email-already-in-use": "An account with that email already exists",
+      "auth/missing-password": "Please, insert a password with at least 6 characters",
+      "auth/weak-password": "Please, insert a password with at least 6 characters",
+      "error-message.sign-up-user.confirm-password-does-not-match": "Your password and confirmation password must match"
+    },
+    "sign-in-user": {
+      "auth/invalid-email": "User not found",
+      "auth/missing-password": "User not found",
+      "auth/invalid-credential": "User not found"
+    }
+  }
 }
