feat: Added training route

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -43,5 +43,6 @@
   "Are you taking any medicine?": "Toma algum remédio?",
   "I am aware of and responsible for the information provided here": "Estou ciente e sou responsável pelas informações aqui colocadas",
   "I recommend that you undergo a medical examination before starting training to obtain the professional's approval": "Recomendo, antes de iniciar os treinos, realizar um exame médico para ter o aval do profissional",
-  "Sign Out": "Sair"
+  "Sign Out": "Sair",
+  "Training": "Treino"
 }
