--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -45,5 +45,5 @@
   "I recommend that you undergo a medical examination before starting training to obtain the professional's approval": "Recomendo, antes de iniciar os treinos, realizar um exame médico para ter o aval do profissional",
   "Sign Out": "Sair",
   "Training": "Treino",
-  "Add Exercise": "Adicionar Exercício"
+  "Manage Exercises": "Gerenciar Exercícios"
 }
