feat: Save exercise

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,6 +17,9 @@
     },
     "add-exercise": {
       "permission-denied": "You don't have permission to add exercises"
+    },
+    "save-exercise": {
+      "permission-denied": "You don't have permission to save exercises"
     }
   }
 }
