--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -57,5 +57,7 @@
   "YouTube URL": "URL YouTube",
   "Save": "Salvar",
   "Cancel": "Cancelar",
-  "Add Exercise": "Adicionar Exercício"
+  "Add Exercise": "Adicionar Exercício",
+  "Video Unavailable": "Video indisponível",
+  "Please, insert an exercise title": "Por favor, insira um título para o exercício"
 }
