fix: Moved manage pages to its own folder

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -59,5 +59,6 @@
   "Cancel": "Cancelar",
   "Add Exercise": "Adicionar Exercício",
   "Video Unavailable": "Video indisponível",
-  "Please, insert an exercise title": "Por favor, insira um título para o exercício"
+  "Please, insert an exercise title": "Por favor, insira um título para o exercício",
+  "Manage Workouts": "Gerenciar treinos"
 }
