feat: Added firestore rules

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -60,5 +60,5 @@
   "Add Exercise": "Adicionar Exercício",
   "Video Unavailable": "Video indisponível",
   "Please, insert an exercise title": "Por favor, insira um título para o exercício",
-  "Manage Workouts": "Gerenciar treinos"
+  "Manage Workouts": "Gerenciar Treinos"
 }
