feat: Added code to load users

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,6 +20,9 @@
     },
     "save-exercise": {
       "permission-denied": "You don't have permission to save exercises"
+    },
+    "load-users": {
+      "permission-denied": "You don't have permission to load users"
     }
   }
 }
