feat: Added combobox to select users

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -66,5 +66,7 @@
   "Add Exercise": "Adicionar Exercício",
   "Video Unavailable": "Video indisponível",
   "Please, insert an exercise title": "Por favor, insira um título para o exercício",
-  "Manage Workouts": "Gerenciar Treinos"
+  "Manage Workouts": "Gerenciar Treinos",
+  "You don't have users :C'": "Você não tem usuários :C",
+  "Select an user": "Selecione um usuário"
 }
