--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -68,5 +68,8 @@
   "Please, insert an exercise title": "Por favor, insira um título para o exercício",
   "Manage Workouts": "Gerenciar Treinos",
   "You don't have users :C'": "Você não tem usuários :C",
-  "Select an user": "Selecione um usuário"
+  "Select an user": "Selecione um usuário",
+  "No workout registered": "Nenhum treino registrado",
+  "Add Workout": "Adicionar treino",
+  "Select an exercise": "Selecione um exercício"
 }
