feat: Added remove workout

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -75,5 +75,7 @@
   "Remove Exercise": "Remover Exercício",
   "Are you sure you want to remove this exercise": "Tem certeza que você deseja remove este exercício?",
   "This action cannot be undone": "Esta ação não pode ser desfeita",
-  "Remove": "Remover"
+  "Remove": "Remover",
+  "Remove Workout": "Remove Workout",
+  "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?"
 }
