feat: Save workouts

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,6 +23,9 @@
     },
     "load-users": {
       "permission-denied": "You don't have permission to load users"
+    },
+    "save-user-workouts": {
+      "permission-denied": "You don't have permission to change users workouts"
     }
   }
 }
