--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -23,6 +23,9 @@
     },
     "load-users": {
       "permission-denied": "Você não tem permissão para carregar a lista de usuários"
+    },
+    "save-user-workouts": {
+      "permission-denied": "Você não tem permissão para alterar os treinos dos usuários"
     }
   },
   "Home": "Início",
