feat: Send workout elements

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -80,5 +80,6 @@
   "This action cannot be undone": "Esta ação não pode ser desfeita",
   "Remove": "Remover",
   "Remove Workout": "Remove Workout",
-  "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?"
+  "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
+  "Send": "Enviar"
 }
