fix: translation typo

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -48,7 +48,7 @@
   "Don't have an account? Sign up": "Não tem uma conta? Cadastre-se",
   "Already have an account? Sign in": "Já tem uma conta? Acesse aqui",
   "Create an Account": "Crie uma Conta",
-  "Fullname": "Nome complete",
+  "Fullname": "Nome completo",
   "Confirm Password": "Confirmar Senha",
   "Anamnese": "Anamnese",
   "In order for you to access your workouts, I'll need some information. We'll conduct a medical history to ensure training safety. Feel free to share whatever you think is relevant.": "Para que você tenha acesso aos seus treinos, precisarei de alguns dados. Faremos uma anamnese para segurança nos treinos. Sinta-se a vontade para falar o que achar pertinente.",
