feat: Added new page

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -84,5 +84,6 @@
   "Remove": "Remover",
   "Remove Workout": "Remove Workout",
   "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
-  "Send": "Enviar"
+  "Send": "Enviar",
+  "Manage Users Workouts": "Gerenciar Treinos dos Usuários"
 }
