feat: create HeroSection component

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -85,5 +85,7 @@
   "Remove Workout": "Remove Workout",
   "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
   "Send": "Enviar",
-  "Manage Users Workouts": "Gerenciar Treinos dos Usuários"
+  "Manage Users Workouts": "Gerenciar Treinos dos Usuários",
+  "Science-based training": "Treinos baseados em ciência",
+  "More than 10 years combining scientific evidence and practice to transform health and performance.": "Mais de 10 anos unindo evidência científica e prática para transformar saúde e performance."
 }
