--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -1,9 +1,94 @@
 {
+  "error-message": {
+    "sign-up-user": {
+      "auth/invalid-email": "Por favor, insira um email válido",
+      "auth/email-already-in-use": "Já existe uma conta com esse email",
+      "auth/missing-password": "Por favor, insira uma senha com pelo menos 6 caracteres",
+      "auth/weak-password": "Por favor, insira uma senha com pelo menos 6 caracteres",
+      "confirm-password-does-not-match": "Sua senha e a senha de confirmação devem ser iguais"
+    },
+    "sign-in-user": {
+      "auth/invalid-email": "Usuário não encontrado",
+      "auth/missing-password": "Usuário não encontrado",
+      "auth/invalid-credential": "Usuário não encontrado"
+    },
+    "load-exercises": {
+      "auth/network-request-failed": "Erro de Rede: Por favor, verifique a sua conexão com a internet"
+    },
+    "add-exercise": {
+      "permission-denied": "Você não tem permissão para adicionar exercícios"
+    },
+    "save-exercise": {
+      "permission-denied": "Você não tem permissão para alterar exercícios"
+    },
+    "load-users": {
+      "permission-denied": "Você não tem permissão para carregar a lista de usuários"
+    },
+    "save-user-workouts": {
+      "permission-denied": "Você não tem permissão para alterar os treinos dos usuários"
+    },
+    "save-user-workout": {
+      "permission-denied": "Você não tem permissão pra enviar o treino"
+    }
+  },
   "Home": "Início",
   "Athlete": "Atleta",
   "Exercise": "Exercício",
   "Sets": "Séries",
   "Reps": "Repetições",
+  "Weight": "Peso",
   "Rest": "Descanso",
-  "Status": "Status"
+  "Status": "Status",
+  "Email": "Email",
+  "Phone Number": "Telefone",
+  "Birthdate": "Data de Nascimento",
+  "Occupation": "Profissão",
+  "Password": "Senha",
+  "Athlete Area": "Área do Atleta",
+  "Access your content": "Acesse seus conteúdos",
+  "Sign in": "Entrar",
+  "Sign up": "Cadastrar",
+  "Don't have an account? Sign up": "Não tem uma conta? Cadastre-se",
+  "Already have an account? Sign in": "Já tem uma conta? Acesse aqui",
+  "Create an Account": "Crie uma Conta",
+  "Fullname": "Nome completo",
+  "Confirm Password": "Confirmar Senha",
+  "Anamnese": "Anamnese",
+  "In order for you to access your workouts, I'll need some information. We'll conduct a medical history to ensure training safety. Feel free to share whatever you think is relevant.": "Para que você tenha acesso aos seus treinos, precisarei de alguns dados. Faremos uma anamnese para segurança nos treinos. Sinta-se a vontade para falar o que achar pertinente.",
+  "What is your goal with training?": "Qual seu objetivo com os treinos?",
+  "Do you have any limitations when it comes to exercise?": "Você possui alguma limitação ao exercício?",
+  "Do you have any medical restrictions?": "Possui alguma restrição médica?",
+  "Are you taking any medicine?": "Toma algum remédio?",
+  "I am aware of and responsible for the information provided here": "Estou ciente e sou responsável pelas informações aqui colocadas",
+  "I recommend that you undergo a medical examination before starting training to obtain the professional's approval": "Recomendo, antes de iniciar os treinos, realizar um exame médico para ter o aval do profissional",
+  "Sign Out": "Sair",
+  "Training": "Treino",
+  "Manage Exercises": "Gerenciar Exercícios",
+  "Edit": "Editar",
+  "Title": "Título",
+  "YouTube URL": "URL YouTube",
+  "Save": "Salvar",
+  "Cancel": "Cancelar",
+  "Add Exercise": "Adicionar Exercício",
+  "Video Unavailable": "Video indisponível",
+  "Please, insert an exercise title": "Por favor, insira um título para o exercício",
+  "Manage Workouts": "Gerenciar Treinos",
+  "You don't have users :C'": "Você não tem usuários :C",
+  "Select an user": "Selecione um usuário",
+  "No workout registered": "Nenhum treino registrado",
+  "Add Workout": "Adicionar treino",
+  "Select an exercise": "Selecione um exercício",
+  "Remove Exercise": "Remover Exercício",
+  "Are you sure you want to remove this exercise": "Tem certeza que você deseja remove este exercício?",
+  "This action cannot be undone": "Esta ação não pode ser desfeita",
+  "Remove": "Remover",
+  "Remove Workout": "Remove Workout",
+  "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
+  "Send": "Enviar",
+  "Manage Users Workouts": "Gerenciar Treinos dos Usuários",
+  "Workout saved": "Treino salvo",
+  "Comment": "Comentário",
+  "Science-based training": "Treinos baseados em ciência",
+  "More than 10 years combining scientific evidence and practice to transform health and performance.": "Mais de 10 anos unindo evidência científica e prática para transformar saúde e performance.",
+  "<empty>": "<vazio>"
 }
