--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -90,5 +90,6 @@
   "Comment": "Comentário",
   "Science-based training": "Treinos baseados em ciência",
   "More than 10 years combining scientific evidence and practice to transform health and performance.": "Mais de 10 anos unindo evidência científica e prática para transformar saúde e performance.",
-  "<empty>": "<vazio>"
+  "<empty>": "<vazio>",
+  "Contact me!": "Entre em contato"
 }
