feat: Create About component/section

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -91,5 +91,12 @@
   "Science-based training": "Treinos baseados em ciência",
   "More than 10 years combining scientific evidence and practice to transform health and performance.": "Mais de 10 anos unindo evidência científica e prática para transformar saúde e performance.",
   "<empty>": "<vazio>",
-  "Contact me!": "Entre em contato"
+  "Contact me!": "Entre em contato",
+  "Why join my team?": "Por que fazer parte do meu time?",
+  "I am a personal trainer and researcher - PhD candidate at Unicamp.": "Sou Personal Trainer e pesquisador - doutorando pela Unicamp.",
+  "My approach combines objective assessments, individualized planning, and constant monitoring.": "Minha abordagem combina avaliações objetivas, planejamento individualizado e acompanhamento constante.",
+  "Plans fitted to your goals": "Planos feitos sob medida para seus objetivos",
+  "Evidence-based method and practice": "Método baseado em evidências e prática",
+  "Weekly adjustments and close follow-up": "Ajustes semanais e acompanhamento próximo",
+  "Kaio in action": "Kaio em ação"
 }
