feat: add Services component/section

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -98,5 +98,12 @@
   "Plans fitted to your goals": "Planos feitos sob medida para seus objetivos",
   "Evidence-based method and practice": "Método baseado em evidências e prática",
   "Weekly adjustments and close follow-up": "Ajustes semanais e acompanhamento próximo",
-  "Kaio in action": "Kaio em ação"
+  "Kaio in action": "Kaio em ação",
+  "With me, you will learn...": "Comigo você aprenderá...",
+  "Train": "Treinar",
+  "I will teach you how to train safely and efficiently to achieve the best results.": "Eu te ensino a treinar com segurança e eficiência para alcançar os melhores resultados.",
+  "Create consistency": "Criar consistência",
+  "No magic formulas! Results come from consistency and well-designed training — I will show you how.": "Sem fórmulas mágicas! Resultados vêm da consistência e do treino bem-feito — vou te mostrar como.",
+  "Respect your limits": "Respeitar seus limites",
+  "Train smart: discover what works for you and progress safely.": "Treine com inteligência: descubra o que funciona para você e evolua com segurança."
 }
