feat: add FAQ section with collapsible items and update translations

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -103,7 +103,7 @@
   "Train": "Treinar",
   "I will teach you how to train safely and efficiently to achieve the best results.": "Eu te ensino a treinar com segurança e eficiência para alcançar os melhores resultados.",
   "Create consistency": "Criar consistência",
-  "No magic formulas! Results come from consistency and well-designed training — I will show you how.": "Sem fórmulas mágicas! Resultados vêm da consistência e do treino bem-feito — vou te mostrar como.",
+  "No magic formulas! Results come from consistency and well-done training — I will show you how.": "Sem fórmulas mágicas! Resultados vêm da consistência e do treino bem-feito — vou te mostrar como.",
   "Respect your limits": "Respeitar seus limites",
   "Testimonials": "Depoimentos",
   "Train smart: discover what works for you and progress safely.": "Treine com inteligência: descubra o que funciona para você e evolua com segurança.",
@@ -112,5 +112,15 @@
   "Excellent technician, persistent, dedicated, patient, good dynamics.": "Excelente técnico, persistente, dedicado, paciente, boas dinâmicas.",
   "Kaio has always been very dedicated to the team throughout the entire period I trained with him, and he is undoubtedly the reason for my progress in basketball. He knows how to deal with each member of the team, bringing out the best in us and helping us achieve extraordinary results.": "O Kaio sempre foi muito dedicado ao time, em todo o período que treinei com ele e é, com certeza, a razão de toda a minha evolução no basquete. Sabe lidar com cada um que integra o time, fazendo com que despertemos o melhor dentro de nós e atinjamos resultados extraordinários.",
   "I have been training with Kaio for years and I would not give him up for anything. He is a highly skilled professional who always strives to do what is best for his students. He helps me a lot with my pain and needs. I highly recommend him!": "Treino há anos com o Kaio e não abro mão. Profissional super preparado, sempre buscando o melhor para os seus alunos. Me ajuda muito com as minhas dores e necessidade. Recomendo!",
-  "Professor Kaio is very attentive and dedicated! He tailors training sessions to suit your current condition, goals, and preferences! He is extremely technically skilled! My results improved dramatically after I started consulting with him about my training! I highly recommend him.": "Professor Kaio muito atencioso e dedicado! Monta os treinos de forma personalizada, de acordo com sua atual condição, seus objetivos e preferências! Extremamente qualificado tecnicamente! Meus resultados melhoraram de forma excepcional depois que passei a fazer minha consultoria de treinos! Super recomendo."
+  "Professor Kaio is very attentive and dedicated! He tailors training sessions to suit your current condition, goals, and preferences! He is extremely technically skilled! My results improved dramatically after I started consulting with him about my training! I highly recommend him.": "Professor Kaio muito atencioso e dedicado! Monta os treinos de forma personalizada, de acordo com sua atual condição, seus objetivos e preferências! Extremamente qualificado tecnicamente! Meus resultados melhoraram de forma excepcional depois que passei a fazer minha consultoria de treinos! Super recomendo.",
+  "What are the training plans?": "Quais os planos de treino?",
+  "In person and consulting. However, due to my PhD studies in Turkey, I will only be available for remote consulting.": "Presencial e consultoria. No entanto, devido aos meus estudos de doutorado na Turquia, só estarei disponível para consultoria remota.",
+  "What are your specialties?": "Quais suas especialidades?",
+  "Rehabilitation, weight loss, health, strength gain, and hypertrophy.": "Reabilitação, emagrecimento, saúde, ganho de força e hipertrofia.",
+  "Do you coach basketball?": "Você ministra treinos de basquete?",
+  "One of the specialties is basketball. Develop your game with me.": "Uma das especialidades é a modalidade de basquete. Desenvolva seu jogo comigo.",
+  "Do I need equipment?": "Preciso de equipamento?",
+  "Not necessarily. The training is tailored to your reality, with or without a gym.": "Não necessariamente. O treino é adaptado a sua realidade, com ou sem academia.",
+  "What are the prices?": "Quais os preços?",
+  "Each plan has its own characteristics. Let is think about which one is the best for you.": "Cada plano possui uma característica. Vamos pensar o que mais se adequa para você?"
 }
