chore: Renamed check ins page

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -85,7 +85,7 @@
   "Remove Workout": "Remove Workout",
   "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
   "Send": "Enviar",
-  "Manage Users Workouts": "Gerenciar Treinos dos Usuários",
+  "Manage Check-ins": "Gerenciar Check-ins",
   "Workout saved": "Treino salvo",
   "Comment": "Comentário",
   "Science-based training": "Treinos baseados em ciência",
