feat: Created manage route

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -63,6 +63,7 @@
   "I recommend that you undergo a medical examination before starting training to obtain the professional's approval": "Recomendo, antes de iniciar os treinos, realizar um exame médico para ter o aval do profissional",
   "Sign Out": "Sair",
   "Training": "Treino",
+  "Manage": "Gerenciar",
   "Manage Exercises": "Gerenciar Exercícios",
   "Edit": "Editar",
   "Title": "Título",
