feat: Changed to load checkins per day

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -123,5 +123,8 @@
   "Do I need equipment?": "Preciso de equipamento?",
   "Not necessarily. The training is tailored to your reality, with or without a gym.": "Não necessariamente. O treino é adaptado a sua realidade, com ou sem academia.",
   "What are the prices?": "Quais os preços?",
-  "Each plan has its own characteristics. Let is think about which one is the best for you.": "Cada plano possui uma característica. Vamos pensar o que mais se adequa para você?"
+  "Each plan has its own characteristics. Let is think about which one is the best for you.": "Cada plano possui uma característica. Vamos pensar o que mais se adequa para você?",
+  "Date": "Data",
+  "<user not found>": "<usuário não encontrado>",
+  "No check-in found": "Nenhum check-in encontrado"
 }
