--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -27,8 +27,11 @@
     "save-user-workouts": {
       "permission-denied": "You don't have permission to change users workouts"
     },
-    "save-user-workout": {
-      "permission-denied": "You don't have permission to send the workout"
+    "save-check-in": {
+      "permission-denied": "You don't have permission to send the check-in"
+    },
+    "load-check-ins": {
+      "permission-denied": "You don't have permission to load check-ins"
     }
   }
 }
