feat: Improved save workout feedback

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -129,5 +129,6 @@
   "Each plan has its own characteristics. Let is think about which one is the best for you.": "Cada plano possui uma característica. Vamos pensar o que mais se adequa para você?",
   "Date": "Data",
   "<user not found>": "<usuário não encontrado>",
-  "No check-in found": "Nenhum check-in encontrado"
+  "No check-in found": "Nenhum check-in encontrado",
+  "Workout saved": "Treino salvo"
 }
