--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -130,5 +130,6 @@
   "Date": "Data",
   "<user not found>": "<usuário não encontrado>",
   "No check-in found": "Nenhum check-in encontrado",
-  "Workout saved": "Treino salvo"
+  "Workout saved": "Treino salvo",  
+  "Ready to Start?": "Pronto para começar?"
 }
