feat: Partnerships section/component

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -131,5 +131,7 @@
   "<user not found>": "<usuário não encontrado>",
   "No check-in found": "Nenhum check-in encontrado",
   "Workout saved": "Treino salvo",  
-  "Ready to Start?": "Pronto para começar?"
+  "Ready to Start?": "Pronto para começar?",
+  "Partnerships": "Parcerias",
+  "(click to be redirected)": "(clique para ser redirecionado)"
 }
