feat: Add Footer component and update layout styles

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -133,5 +133,6 @@
   "Workout saved": "Treino salvo",  
   "Ready to Start?": "Pronto para começar?",
   "Partnerships": "Parcerias",
-  "(click to be redirected)": "(clique para ser redirecionado)"
+  "(click to be redirected)": "(clique para ser redirecionado)",
+  "Kaio Borges Guerrero Personal Training. All rights reserved.": "Kaio Borges Guerrero Personal Training. Todos os direitos reservados."
 }
