refactor: Moved links to athlete page

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -134,5 +134,7 @@
   "Ready to Start?": "Pronto para começar?",
   "Partnerships": "Parcerias",
   "(click to be redirected)": "(clique para ser redirecionado)",
-  "Kaio Borges Guerrero Personal Training. All rights reserved.": "Kaio Borges Guerrero Personal Training. Todos os direitos reservados."
+  "Kaio Borges Guerrero Personal Training. All rights reserved.": "Kaio Borges Guerrero Personal Training. Todos os direitos reservados.",
+  "Workout": "Treino",
+  "Workouts": "Treinos"
 }
