--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,6 +32,15 @@
     },
     "load-check-ins": {
       "permission-denied": "You don't have permission to load check-ins"
+    },
+    "load-publications": {
+      "auth/network-request-failed": "Network Error: Please, check your network connection"
+    },
+    "add-publication": {
+      "permission-denied": "You don't have permission to add publications"
+    },
+    "save-publication": {
+      "permission-denied": "You don't have permission to save publications"
     }
   }
 }
