feat: add ResumePage with experience and education sections

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -153,5 +153,9 @@
   "Unpublish": "Despublicar",
   "Remove Publication": "Remover Publicação",
   "Remove Language": "Remover língua",
-  "Are you sure you want to remove this publication?": "Tem certeza que deseja remover está publicação?"
+  "Are you sure you want to remove this publication?": "Tem certeza que deseja remover está publicação?",
+  "Professional Education": "Formação profissional",
+  "In activity": "Em atividade",
+  "Event production": "Produção de eventos",
+  "Previous experience": "Experiências anteriores"
 }
