feat: update translations and enhance About section styling

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -157,5 +157,6 @@
   "Professional Education": "Formação profissional",
   "In activity": "Em atividade",
   "Event production": "Produção de eventos",
-  "Previous experience": "Experiências anteriores"
+  "Previous experience": "Experiências anteriores",
+  "Learn More About Me": "Saiba Mais Sobre Mim"
 }
