feat: Enhance AthleteAreaPage with new components and styles; add AvatarPlaceholder and icons

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -158,5 +158,18 @@
   "In activity": "Em atividade",
   "Event production": "Produção de eventos",
   "Previous experience": "Experiências anteriores",
-  "Learn More About Me": "Saiba Mais Sobre Mim"
+  "Learn More About Me": "Saiba Mais Sobre Mim",
+  "Age:": "Idade:",
+  "years old": "anos",
+  "Plan:": "Plano:",
+  "Frequency:": "Frequência:",
+  "Trainning #:": "Treino Número:",
+  "Production:": "Produção:",
+  "Objective:": "Objetivo:",
+  "Access your workouts": "Acesse seus treinos",
+  "Check-in history": "Histórico de checkins",
+  "Last check-in": "Último check-in",
+  "Physical Assessment": "Testes Físicos",
+  "Assessment history": "Histórico de avaliações",
+  "Latest tests:": "Últimos testes:"
 }
