--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -171,5 +171,9 @@
   "Last check-in": "Último check-in",
   "Physical Assessment": "Testes Físicos",
   "Assessment history": "Histórico de avaliações",
-  "Latest tests": "Últimos testes"
+  "Latest tests": "Últimos testes",
+  "Publications": "Publicações",
+  "Read more": "Leia mais",
+  "Loading...": "Carregando...",
+  "Publication not found": "Publicação não encontrada"
 }
