feat: Manage users page

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -175,5 +175,6 @@
   "Publications": "Publicações",
   "Read more": "Leia mais",
   "Loading...": "Carregando...",
-  "Publication not found": "Publicação não encontrada"
+  "Publication not found": "Publicação não encontrada",
+  "Manage Users": "Gerenciar Usuários"
 }
