--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -176,5 +176,6 @@
   "Read more": "Leia mais",
   "Loading...": "Carregando...",
   "Publication not found": "Publicação não encontrada",
-  "Manage Users": "Gerenciar Usuários"
+  "Manage Users": "Gerenciar Usuários",
+  "View last 100 check-ins": "Ver últimos 100 check-ins"
 }
