feat: Implement PublicationCard component and enhance PublicationsPage layout with new styles and navigation

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -177,5 +177,6 @@
   "Loading...": "Carregando...",
   "Publication not found": "Publicação não encontrada",
   "Manage Users": "Gerenciar Usuários",
-  "View last 100 check-ins": "Ver últimos 100 check-ins"
+  "View last 100 check-ins": "Ver últimos 100 check-ins",
+  "Back": "Voltar"
 }
