--- a/locales/pt/translation.json
+++ b/locales/pt/translation.json
@@ -27,8 +27,20 @@
     "save-user-workouts": {
       "permission-denied": "Você não tem permissão para alterar os treinos dos usuários"
     },
-    "save-user-workout": {
-      "permission-denied": "Você não tem permissão pra enviar o treino"
+    "save-check-in": {
+      "permission-denied": "Você não tem permissão para enviar o check-in"
+    },
+    "load-check-ins": {
+      "permission-denied": "Você não tem permissão para carregar os check-ins"
+    },
+    "load-publications": {
+      "auth/network-request-failed": "Erro de Rede: Por favor, verifique a sua conexão com a internet"
+    },
+    "add-publication": {
+      "permission-denied": "Você não tem permissão para adicionar publicações"
+    },
+    "save-publication": {
+      "permission-denied": "Você não tem permissão para salvar publicações"
     }
   },
   "Home": "Início",
@@ -63,6 +75,7 @@
   "I recommend that you undergo a medical examination before starting training to obtain the professional's approval": "Recomendo, antes de iniciar os treinos, realizar um exame médico para ter o aval do profissional",
   "Sign Out": "Sair",
   "Training": "Treino",
+  "Manage": "Gerenciar",
   "Manage Exercises": "Gerenciar Exercícios",
   "Edit": "Editar",
   "Title": "Título",
@@ -85,10 +98,85 @@
   "Remove Workout": "Remove Workout",
   "Are you sure you want to remove this workout?": "Tem certeza que você deseja remove este treino?",
   "Send": "Enviar",
-  "Manage Users Workouts": "Gerenciar Treinos dos Usuários",
-  "Workout saved": "Treino salvo",
+  "Manage Check-ins": "Gerenciar Check-ins",
+  "Check-in saved": "Check-in salvo",
   "Comment": "Comentário",
   "Science-based training": "Treinos baseados em ciência",
   "More than 10 years combining scientific evidence and practice to transform health and performance.": "Mais de 10 anos unindo evidência científica e prática para transformar saúde e performance.",
-  "<empty>": "<vazio>"
+  "<empty>": "<vazio>",
+  "Contact me!": "Entre em contato",
+  "Why join my team?": "Por que fazer parte do meu time?",
+  "I am a personal trainer and researcher - PhD candidate at Unicamp.": "Sou Personal Trainer e pesquisador - doutorando pela Unicamp.",
+  "My approach combines objective assessments, individualized planning, and constant monitoring.": "Minha abordagem combina avaliações objetivas, planejamento individualizado e acompanhamento constante.",
+  "Plans fitted to your goals": "Planos feitos sob medida para seus objetivos",
+  "Evidence-based method and practice": "Método baseado em evidências e prática",
+  "Weekly adjustments and close follow-up": "Ajustes semanais e acompanhamento próximo",
+  "Team Kaio": "Time Kaio",
+  "With me, you will learn...": "Comigo você aprenderá...",
+  "Train": "Treinar",
+  "I will teach you how to train safely and efficiently to achieve the best results.": "Eu te ensino a treinar com segurança e eficiência para alcançar os melhores resultados.",
+  "Create consistency": "Criar consistência",
+  "No magic formulas! Results come from consistency and well-done training — I will show you how.": "Sem fórmulas mágicas! Resultados vêm da consistência e do treino bem-feito — vou te mostrar como.",
+  "Respect your limits": "Respeitar seus limites",
+  "Testimonials": "Depoimentos",
+  "Train smart: discover what works for you and progress safely.": "Treine com inteligência: descubra o que funciona para você e evolua com segurança.",
+  "The teacher is excellent! I have been with him for over 3 years and the progress is clear! I recommend him for all types of athletes, from beginners to professionals!": "O professor é excelente! Estou há mais de 3 anos com ele e as evoluções são nítidas! Recomendo para todo tipo de atleta, do iniciante ao profissional!",
+  "Kaio is incredible. He understands a lot technically, genuinely cares about his students, is super attentive, always pays attention to every detail, and is an amazing person.": "O Kaio é incrível. Entende muito tecnicamente, se preocupa de verdade com seus alunos, super atencioso, sempre atento a todos os detalhes e é uma pessoa sensacional.",
+  "Excellent technician, persistent, dedicated, patient, good dynamics.": "Excelente técnico, persistente, dedicado, paciente, boas dinâmicas.",
+  "Kaio has always been very dedicated to the team throughout the entire period I trained with him, and he is undoubtedly the reason for my progress in basketball. He knows how to deal with each member of the team, bringing out the best in us and helping us achieve extraordinary results.": "O Kaio sempre foi muito dedicado ao time, em todo o período que treinei com ele e é, com certeza, a razão de toda a minha evolução no basquete. Sabe lidar com cada um que integra o time, fazendo com que despertemos o melhor dentro de nós e atinjamos resultados extraordinários.",
+  "I have been training with Kaio for years and I would not give him up for anything. He is a highly skilled professional who always strives to do what is best for his students. He helps me a lot with my pain and needs. I highly recommend him!": "Treino há anos com o Kaio e não abro mão. Profissional super preparado, sempre buscando o melhor para os seus alunos. Me ajuda muito com as minhas dores e necessidade. Recomendo!",
+  "Professor Kaio is very attentive and dedicated! He tailors training sessions to suit your current condition, goals, and preferences! He is extremely technically skilled! My results improved dramatically after I started consulting with him about my training! I highly recommend him.": "Professor Kaio muito atencioso e dedicado! Monta os treinos de forma personalizada, de acordo com sua atual condição, seus objetivos e preferências! Extremamente qualificado tecnicamente! Meus resultados melhoraram de forma excepcional depois que passei a fazer minha consultoria de treinos! Super recomendo.",
+  "What are the training plans?": "Quais os planos de treino?",
+  "In person and consulting. However, due to my PhD studies in Turkey, I will only be available for remote consulting.": "Presencial e consultoria. No entanto, devido aos meus estudos de doutorado na Turquia, só estarei disponível para consultoria remota.",
+  "What are your specialties?": "Quais suas especialidades?",
+  "Rehabilitation, weight loss, health, strength gain, and hypertrophy.": "Reabilitação, emagrecimento, saúde, ganho de força e hipertrofia.",
+  "Do you coach basketball?": "Você ministra treinos de basquete?",
+  "One of the specialties is basketball. Develop your game with me.": "Uma das especialidades é a modalidade de basquete. Desenvolva seu jogo comigo.",
+  "Do I need equipment?": "Preciso de equipamento?",
+  "Not necessarily. The training is tailored to your reality, with or without a gym.": "Não necessariamente. O treino é adaptado a sua realidade, com ou sem academia.",
+  "What are the prices?": "Quais os preços?",
+  "Each plan has its own characteristics. Let is think about which one is the best for you.": "Cada plano possui uma característica. Vamos pensar o que mais se adequa para você?",
+  "Date": "Data",
+  "<user not found>": "<usuário não encontrado>",
+  "No check-in found": "Nenhum check-in encontrado",
+  "Workout saved": "Treino salvo",  
+  "Ready to Start?": "Pronto para começar?",
+  "Partnerships": "Parcerias",
+  "(click to be redirected)": "(clique para ser redirecionado)",
+  "Kaio Borges Guerrero Personal Training. All rights reserved.": "Kaio Borges Guerrero Personal Training. Todos os direitos reservados.",
+  "Workout": "Treino",
+  "Workouts": "Treinos",
+  "Manage Publications": "Gerenciar Publicações",
+  "Add Publication": "Adicionar Publicação",
+  "English": "Inglês",
+  "Portuguese": "Português",
+  "Unpublish": "Despublicar",
+  "Remove Publication": "Remover Publicação",
+  "Remove Language": "Remover língua",
+  "Are you sure you want to remove this publication?": "Tem certeza que deseja remover está publicação?",
+  "Professional Education": "Formação profissional",
+  "In activity": "Em atividade",
+  "Event production": "Produção de eventos",
+  "Previous experience": "Experiências anteriores",
+  "Learn More About Me": "Saiba Mais Sobre Mim",
+  "Age": "Idade",
+  "years old": "anos",
+  "Plan": "Plano",
+  "Frequency": "Frequência",
+  "Trainning #": "Treino Número",
+  "Production": "Produção",
+  "Objective": "Objetivo",
+  "Access your workouts": "Acesse seus treinos",
+  "Check-in history": "Histórico de checkins",
+  "Last check-in": "Último check-in",
+  "Physical Assessment": "Testes Físicos",
+  "Assessment history": "Histórico de avaliações",
+  "Latest tests": "Últimos testes",
+  "Publications": "Publicações",
+  "Read more": "Leia mais",
+  "Loading...": "Carregando...",
+  "Publication not found": "Publicação não encontrada",
+  "Manage Users": "Gerenciar Usuários",
+  "View last 100 check-ins": "Ver últimos 100 check-ins",
+  "Back": "Voltar"
 }
